# rust-text-to-gif

./: Cargo.toml
src/: main.rs
