[package]
name = "rust-gif-maker"
version = "0.1.0"
authors = ["Daniel Liljeberg <liljebergxyz@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.10.3"

[dependencies.sdl2]
version = "0.33"
default-features = false
features = ["ttf"]